// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Dog: Represents a dog owned by a dog owner.
Owner: Represents a dog owner.
WalkRequest: Represents a walk request from an owner for their dog(s).
Walker: Represents a person who walks dogs for owners.
'''
}

Table Dog {
    id INTEGER [primary key]
    owner_id INTEGER 
    name VARCHAR 
    breed VARCHAR 
    size VARCHAR 
    notes VARCHAR 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table Owner {
    id INTEGER [primary key]
    name VARCHAR 
    address VARCHAR 
    phone VARCHAR 
    email VARCHAR 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table WalkRequest {
    id INTEGER [primary key]
    owner_id INTEGER 
    dog_id INTEGER 
    walker_id INTEGER 
    status VARCHAR 
    day_of_week VARCHAR 
    time_of_day VARCHAR 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table Walker {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    postal_code VARCHAR 
    phone VARCHAR 
    email VARCHAR 
    max_dogs_per_walk INTEGER 
    price_for_small FLOAT 
    price_for_medium FLOAT 
    price_for_large FLOAT 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }



// Relationships
    Ref: Dog.(owner_id) < Owner.(id)
    Ref: WalkRequest.(dog_id) < Dog.(id)
    Ref: WalkRequest.(owner_id) < Owner.(id)
    Ref: WalkRequest.(walker_id) < Walker.(id)
